--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,6 +6,8 @@ lazy-object-proxy==1.4.1
 mccabe==0.6.1
 pycodestyle==2.5.0
 pylint==2.3.1
+pylint-django==2.0.9
+pylint-plugin-utils==0.5
 pytz==2019.1
 six==1.12.0
 sqlparse==0.3.0
